add swagger webmvc openApi

--- a/security-with-jwt-authentication/src/main/resources/application.properties
+++ b/security-with-jwt-authentication/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Dhaka
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+##springdoc.api-docs.enabled=false
+##springdoc.swagger-ui.enabled=false
+##springdoc.packages-to-scan=com.bezkoder.spring.swagger.controller
+#springdoc.swagger-ui.path=/bezkoder-documentation
+#springdoc.api-docs.path=/bezkoder-api-docs
+##springdoc.swagger-ui.operationsSorter=method
+##springdoc.swagger-ui.tagsSorter=alpha
+#springdoc.swagger-ui.tryItOutEnabled=true
+#springdoc.swagger-ui.filter=true
